objects/Staging_Property_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>DWH_Instance__c</fullName>
        <label>DWH: Instance</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Propert_Ins_Exp_Date__c</fullName>
        <label>Property Insurance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Source_System__c</fullName>
        <label>DWH: Source System</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Time__c</fullName>
        <label>Expiry Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Premium__c</fullName>
        <label>Insurance Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Description__c</fullName>
        <label>Insurance Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurer_Short_Name__c</fullName>
        <label>Insurer Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property_Amount_Insured__c</fullName>
        <label>Property Amount Insured</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_External_ID__c</fullName>
        <label>Property External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Ins_Policy_No__c</fullName>
        <label>Property Insurance Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurance_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Property Insurance External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurer_External_ID__c</fullName>
        <label>Property Insurer External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Replace_Sq_Mtrs__c</fullName>
        <label>Property Replace Sq Mtrs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Cover__c</fullName>
        <label>Public Liability Cover</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Property_Address__c</fullName>
        <label>Security Property Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Staging Property Insurance</label>
    <nameField>
        <label>Staging Propery Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Property Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>